--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
         </div>
     		<div class="row">
 				<div class="col-md-4 text-center d-flex ftco-animate">
-					<div href="#" class="services-1 shadow">
+					<div class="services-1 shadow">
 						<span class="icon">
 							<i class="flaticon-web-design"></i>
 						</span>
@@ -537,7 +537,7 @@
 					</div>
 				</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1 shadow">
+						<div  class="services-1 shadow">
 							<span class="icon">
 								<i class="flaticon-ux-design"></i>
 							</span>
@@ -545,10 +545,10 @@
 								<h3 class="mb-5">Web Design</h3>
 								<p>Think how design can be done easily with newest technology </p>
 							</div>
-						</a>
+						</div>
 					</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1 shadow">
+						<div class="services-1 shadow">
 							<span class="icon">
 								<i class="flaticon-innovation"></i>
 							</span>
@@ -556,7 +556,7 @@
 								<h3 class="mb-5">Innovation</h3>
 								<p>Deep interest on how our static life becomes more dynamic by using new technology</p>
 							</div>
-						</a>
+						</div>
 					</div>
 	
 				</div>
